--- a/Thiết kế web/Học Ngoài Lớp/Kiểm tra năng lực/style.css
+++ b/Thiết kế web/Học Ngoài Lớp/Kiểm tra năng lực/style.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .wrap {
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -19,6 +23,10 @@ img{
 
 a{
     text-decoration: none;
+}
+
+button{
+    border: none;
 }
 
 /* =====================================header====================================== */
@@ -199,11 +207,6 @@ a{
     height: 100%;
 }
 
-.aside {
-    width: 10%;
-    height: 100%;
-}
-
 .section-header {
     width: 100%;
     height: 30vh;
@@ -218,7 +221,7 @@ a{
 
 .article {
     width: 100%;
-    height: 80%;    
+    /* height: 80%;*/
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -253,8 +256,22 @@ a{
     height: 10%;
 }
 
+.aside {
+    width: 10%;
+    height: 100%;
+    background-color: lightblue;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 /* =====================================footer====================================== */
 .footer {
     width: 100%;
     height: 10%;
+    text-align: center;
+    padding: 1%;
+    box-sizing: border-box;
+    color: white;
+    background-color: rgb(0, 4, 37);
 }
