--- a/Thiết kế web/Học Ngoài Lớp/Kiểm tra năng lực/style.css
+++ b/Thiết kế web/Học Ngoài Lớp/Kiểm tra năng lực/style.css
@@ -14,6 +14,7 @@ html {
 .container {
     width: 100%;
     height: 200vh;
+    z-index: 1;
 }
 
 img{
@@ -26,7 +27,14 @@ a{
 }
 
 button{
+    width: 100%;
+    height: 100%;
     border: none;
+    transition-duration: 0.5s;
+}
+
+button:hover{
+    background-color: lightblue;
 }
 
 /* =====================================header====================================== */
