--- a/Web đồ án/Css/style.css
+++ b/Web đồ án/Css/style.css
@@ -7,6 +7,7 @@
 body {
     background-color: gray;
     font-family: Arial, Helvetica, sans-serif;
+    overflow-x: hidden;
 }
 
 ul {
@@ -27,7 +28,6 @@ header img {
     height: 100%;
     object-fit: cover;
 }
-
 /* --------------------------------------nav-------------------------------------- */
 
 .top-nav {
