--- a/Web chuẩn bị/Css/style_search_box.css
+++ b/Web chuẩn bị/Css/style_search_box.css
@@ -18,7 +18,7 @@
 }
 
 .search-box-btn {
-    background-color: lightyellow;
+    background-color: #f5f5f5;
     position: absolute;
     right: 0;
     top: 0;
