--- a/Web chuẩn bị/Css/style.css
+++ b/Web chuẩn bị/Css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background: linear-gradient(to right, #4daf54, #3dBBB0);
+    background: #f5f5f5;
     font-family: Arial, Helvetica, sans-serif;
     overflow-x: hidden;
 }
@@ -28,14 +28,14 @@ header {
 .top-nav {
     max-width: 1200px;
     height: 40px;
-    background-color: #242628;
+    background-color: white;
     margin: auto;
     padding: 1px 5px 1px 5px;
 }
 
 .top-nav ul li,
 a {
-    color: white;
+    color: black;
     font-size: 15px;
 }
 
@@ -60,7 +60,7 @@ nav ul {
     width: 100px;
     height: 34px;
     font-size: 15px;
-    color: white;
+    color: black;
     background-color: transparent;
     border: 1px solid white;
     border-radius: 3px;
